recursion.logo.koch.SquareKoch.scala.error
Compilation error:
SquareKoch:26: error: not found: value squareside
    squareside(levels-1,length/3);
    ^